--- a/Project1 - Data Preprocessing/data_preprocessing.ipynb
+++ b/Project1 - Data Preprocessing/data_preprocessing.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 12,
       "id": "dd4826a7",
       "metadata": {
         "id": "dd4826a7"
@@ -27,24 +27,28 @@
     {
       "cell_type": "code",
       "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
+        "!git clone \"https://github.com/isurushanaka/AII_WorkShop.git\""
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "k0MhU8taGqQI",
-        "outputId": "3a24b271-ffd5-4c8c-898c-eb9f5c69eb8e"
+        "outputId": "77793c4a-9275-4e65-9dff-b422c4acb087"
       },
       "id": "k0MhU8taGqQI",
-      "execution_count": 3,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/drive\n"
+            "Cloning into 'AII_WorkShop'...\n",
+            "remote: Enumerating objects: 33, done.\u001b[K\n",
+            "remote: Counting objects: 100% (33/33), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (30/30), done.\u001b[K\n",
+            "remote: Total 33 (delta 8), reused 14 (delta 1), pack-reused 0\u001b[K\n",
+            "Unpacking objects: 100% (33/33), 58.67 KiB | 2.35 MiB/s, done.\n"
           ]
         }
       ]
@@ -61,14 +65,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 13,
       "id": "03635fb2",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "03635fb2",
-        "outputId": "081d43d8-6ecf-42fa-efdf-e2d1ca883107"
+        "outputId": "a08bd5aa-21c4-4bc5-e4fa-e705c8c11528"
       },
       "outputs": [
         {
@@ -90,7 +94,7 @@
         }
       ],
       "source": [
-        "dataset = pd.read_csv('/content/drive/MyDrive/AII Workshop/Project 1 - Project1 - Data Preprocessing/data.csv')\n",
+        "dataset = pd.read_csv('/content/AII_WorkShop/Project1 - Data Preprocessing/data.csv')\n",
         "X = dataset.iloc[:, :-1].values\n",
         "y = dataset.iloc[:, -1].values\n",
         "print(X)\n",
@@ -109,7 +113,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 14,
       "id": "de4ad5fc",
       "metadata": {
         "id": "de4ad5fc"
@@ -124,14 +128,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 15,
       "id": "2253778a",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "2253778a",
-        "outputId": "af736147-d846-46d1-f0e8-f732a4dc5585"
+        "outputId": "198ec971-e826-4913-9a0f-1e0358b8a301"
       },
       "outputs": [
         {
@@ -177,14 +181,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 16,
       "id": "b77ffb1c",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "b77ffb1c",
-        "outputId": "8b10e660-3609-445d-cc02-44ccece7d913"
+        "outputId": "9442c3b5-4207-4c59-a457-927e5a9d2447"
       },
       "outputs": [
         {
@@ -224,14 +228,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 17,
       "id": "63c083c6",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "63c083c6",
-        "outputId": "4a3d5ea6-1850-46ba-a1af-810437fe2254"
+        "outputId": "e884a068-f67f-494b-8d21-88cacf2a0b3b"
       },
       "outputs": [
         {
@@ -261,14 +265,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 18,
       "id": "f2d5464d",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "f2d5464d",
-        "outputId": "2e28c9e3-d253-474e-abda-09f381d19b35"
+        "outputId": "5d8219be-c8d0-4e67-864a-ac927323b1c1"
       },
       "outputs": [
         {
@@ -311,14 +315,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 19,
       "id": "bd615f9c",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "bd615f9c",
-        "outputId": "f9cd6342-c214-47a2-fbe7-e402dd040b12"
+        "outputId": "bfc79715-3c34-4bbf-fb8f-e0f31b535b3c"
       },
       "outputs": [
         {
