--- a/Project1 - Data Preprocessing/data_preprocessing.ipynb
+++ b/Project1 - Data Preprocessing/data_preprocessing.ipynb
@@ -2,6 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/isurushanaka/AII_WorkShop/blob/main/Project1%20-%20Data%20Preprocessing/data_preprocessing.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "397b78b4",
       "metadata": {
         "id": "397b78b4"
@@ -12,7 +22,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "id": "dd4826a7",
       "metadata": {
         "id": "dd4826a7"
@@ -37,7 +47,7 @@
         "outputId": "77793c4a-9275-4e65-9dff-b422c4acb087"
       },
       "id": "k0MhU8taGqQI",
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -65,7 +75,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "id": "03635fb2",
       "metadata": {
         "colab": {
@@ -113,7 +123,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "id": "de4ad5fc",
       "metadata": {
         "id": "de4ad5fc"
@@ -128,7 +138,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "id": "2253778a",
       "metadata": {
         "colab": {
@@ -181,7 +191,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "id": "b77ffb1c",
       "metadata": {
         "colab": {
@@ -228,7 +238,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "id": "63c083c6",
       "metadata": {
         "colab": {
@@ -265,7 +275,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "id": "f2d5464d",
       "metadata": {
         "colab": {
@@ -315,7 +325,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "id": "bd615f9c",
       "metadata": {
         "colab": {
@@ -381,7 +391,8 @@
       "version": "3.10.8"
     },
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "nbformat": 4,
