--- a/Project2 - Simple Linear Regression/linear_regression.ipynb
+++ b/Project2 - Simple Linear Regression/linear_regression.ipynb
@@ -2,6 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/isurushanaka/AII_WorkShop/blob/main/Project2%20-%20Simple%20Linear%20Regression/linear_regression.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "7ba143df",
       "metadata": {
         "id": "7ba143df"
@@ -22,7 +32,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "998da0ad",
       "metadata": {
         "id": "998da0ad"
@@ -47,7 +57,7 @@
         }
       },
       "id": "zAIgd3GMRARU",
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -75,7 +85,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "2f61e777",
       "metadata": {
         "id": "2f61e777",
@@ -117,7 +127,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "f0622f8a",
       "metadata": {
         "id": "f0622f8a"
@@ -140,7 +150,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "b5276fa4",
       "metadata": {
         "id": "b5276fa4",
@@ -183,7 +193,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "id": "8a4064b0",
       "metadata": {
         "id": "8a4064b0"
@@ -205,7 +215,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "id": "3875be58",
       "metadata": {
         "id": "3875be58",
@@ -250,7 +260,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "id": "5459fce8",
       "metadata": {
         "id": "5459fce8",
@@ -313,7 +323,8 @@
       "version": "3.10.8"
     },
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "nbformat": 4,
