--- a/Project3 - Logistic Regression/logistic_regression.ipynb
+++ b/Project3 - Logistic Regression/logistic_regression.ipynb
@@ -2,6 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/isurushanaka/AII_WorkShop/blob/main/Project3%20-%20Logistic%20Regression/logistic_regression.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "61c77259",
       "metadata": {
         "id": "61c77259"
@@ -12,7 +22,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "b7550ec5",
       "metadata": {
         "id": "b7550ec5"
@@ -37,7 +47,7 @@
         }
       },
       "id": "4mQX4fMnVcpZ",
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -65,7 +75,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "1fc16956",
       "metadata": {
         "colab": {
@@ -107,7 +117,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "8701ad2d",
       "metadata": {
         "id": "8701ad2d"
@@ -130,7 +140,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "0e693155",
       "metadata": {
         "id": "0e693155"
@@ -145,7 +155,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "ce57d2c6",
       "metadata": {
         "colab": {
@@ -179,7 +189,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "b35b841a",
       "metadata": {
         "colab": {
@@ -222,7 +232,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "d06131f9",
       "metadata": {
         "id": "d06131f9"
@@ -234,7 +244,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "63b8f5c5",
       "metadata": {
         "colab": {
@@ -368,7 +378,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "id": "5e1385ed",
       "metadata": {
         "colab": {
@@ -416,7 +426,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "id": "b34f8719",
       "metadata": {
         "colab": {
@@ -496,7 +506,8 @@
       "version": "3.10.8"
     },
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "nbformat": 4,
