--- a/Project4 - Image Classification/image_classification.ipynb
+++ b/Project4 - Image Classification/image_classification.ipynb
@@ -2,6 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/isurushanaka/AII_WorkShop/blob/main/Project4%20-%20Image%20Classification/image_classification.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "eee84af5",
       "metadata": {
         "id": "eee84af5"
@@ -53,7 +63,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "id": "150c8a9b",
       "metadata": {
         "id": "150c8a9b"
@@ -66,7 +76,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "d5946eb7",
       "metadata": {
         "id": "d5946eb7"
@@ -93,7 +103,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "d8312ce2",
       "metadata": {
         "colab": {
@@ -340,7 +350,7 @@
         }
       ],
       "source": [
-        "probability_model = tf.keras.Sequential([model, \n",
+        "probability_model = tf.keras.Sequential([model,\n",
         "                                         tf.keras.layers.Softmax()])\n",
         "predictions = probability_model.predict(x_test)"
       ]
@@ -569,7 +579,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "3cb6bc31",
       "metadata": {
         "id": "3cb6bc31"
@@ -592,7 +602,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "bcbfaf9e",
       "metadata": {
         "id": "bcbfaf9e"
@@ -619,7 +629,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "685d0911",
       "metadata": {
         "id": "685d0911"
@@ -658,7 +668,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "id": "75434aec",
       "metadata": {
         "colab": {
@@ -712,7 +722,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "id": "deb99544",
       "metadata": {
         "colab": {
@@ -749,7 +759,7 @@
         }
       },
       "id": "Kh4_1CNO4KkJ",
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -773,7 +783,7 @@
         }
       },
       "id": "SVvRk7b24WHD",
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -802,7 +812,7 @@
         }
       },
       "id": "uxNcKdC64X0k",
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -829,7 +839,7 @@
         }
       },
       "id": "kQoyuTVB4eDM",
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -856,7 +866,7 @@
         }
       },
       "id": "5lcPBMDl55pH",
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -918,7 +928,7 @@
         "id": "eq5DbLDZ6W46"
       },
       "id": "eq5DbLDZ6W46",
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -945,7 +955,7 @@
         }
       },
       "id": "iWLBSOXw639f",
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -981,7 +991,8 @@
       "version": "3.10.8"
     },
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "nbformat": 4,
